complete gun page

--- a/src/main/java/fit/wenchao/mycrawler/ui/my-crawler-frontend/src/styles/common-style.scss
+++ b/src/main/java/fit/wenchao/mycrawler/ui/my-crawler-frontend/src/styles/common-style.scss
@@ -181,6 +181,23 @@ $google-gray-400: #bdbdbd;
     margin-top: 20px;
 }
 
+
+.mgr5 {
+    margin-right: 5px;
+}
+
+.mgt5 {
+    margin-top: 5px;
+}
+
+.mgb5 {
+    margin-bottom: 5px;
+}
+
+.mgl5 {
+    margin-left: 5px;
+}
+
 .mgr8 {
     margin-right: 8px;
 }
